src/Standards/Generic/Tests/NamingConventions/InterfaceSuffixRequiredForInterfaceUnitTest.inc
<?php

interface SomeNameInterface
{

}

interface ISomeName // error
{

}

interface ISomeNameInterface
{

}


interface ISomeOtherNameinterface // error
{

}

interface mInterface
{

}
